# flying-object-recognition-system

./: CMakeLists.txt  README.md
src/: main.cpp  main_window.cpp  main_window.hpp
